# flitton_2023_scraps

./: README.md
front_end/: package-lock.json
front_end/src/: App.js
front_end/src/components/: CreateToDoItem.js  LoginForm.js  ToDoItem.js
front_end/src/css/: LoginForm.css
hyper_actors/: Cargo.toml
hyper_actors/src/: main.rs
hyper_actors/src/actors/: messages.rs  runner.rs  state.rs
simulation/: Cargo.toml
simulation/src/: main.rs
tcpprotocols/client/: Cargo.toml
tcpprotocols/server/: Cargo.toml
todo_app/: Cargo.toml
todo_app/src/: main.rs  processes.rs
todo_app/src/to_do/: enums.rs
tokio_agents/client/: Cargo.toml
tokio_agents/server/: Cargo.toml
web_app/: Cargo.toml  config.toml  diesel.toml  docker-compose.yaml  state.json
web_app/css/: base.css
web_app/migrations/2024-06-20-211157_create_to_do_items/: up.sql
web_app/migrations/2024-06-21-191036_create_users/: up.sql
web_app/scripts/: run_test_pipeline.sh  to_do_items.postman_collection.json  wait_for_database.sh
web_app/src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  views.rs
web_app/src/json_serialization/: to_do_items.rs
web_app/src/models/item/: item.rs  new_item.rs
web_app/src/models/user/: new_user.rs  user.rs
web_app/src/to_do/: enums.rs
web_app/src/to_do/structs/: base.rs  done.rs  pending.rs
web_app/src/views/: auth.rs  to_do.rs
web_app/src/views/app/: content_loader.rs
web_app/src/views/auth/: login.rs  logout.rs
web_app/src/views/to_do/: create.rs  delete.rs  edit.rs
web_app/src/views/users/: create.rs
web_app/templates/: main.html
(+12 files in other folders)
