[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
actix-service = "2.0.2"
chrono = {version = "0.4.38", features = ["serde"]}
bcrypt = "0.15.1"
diesel = { version = "2.2.1", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
jsonwebtoken = "=9.3.0"
redis = "0.25.3"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
uuid = {version = "1.8.0", features = ["serde", "v4"]}
